fix: stub libvirtgo bindings for local dev
